# sample-alembic

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 83936af2b151_create_tables.py  8a39fac4544a_create_tables.py
src/sample_alembic/: __init__.py  app.py  models.py
