[project]
name = "sample-alembic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Haruki Ise", email = "hise@umn.co.jp" }
]
dependencies = [
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "uuid6>=2024.7.10",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample_alembic"]
